--- a/vignettes/datamgmt-vignette.Rmd
+++ b/vignettes/datamgmt-vignette.Rmd
@@ -55,6 +55,22 @@ create_attributes_table(NULL, attributes_table)
 create_attributes_table(data, attributes_table)
 ```
 
+## Get custom unit data frame
+
+The `get_custom_units` function uses the udunits2 unit library to format inputted unit into an EML unit form.
+
+Example:
+
+```{r}
+#The following all return the same data frame.
+get_custom_units('kilometersPerSquareSecond') #preferred input form
+get_custom_units('Kilometers per seconds squared')
+get_custom_units('km/s^2')
+get_custom_units('km s-2')
+get_custom_units('s-2 /     kilometers-1') #works but is not advised
+```
+
+
 ## Adding an ORCID to a creator
 
 A complete data package requires that at minimum one creator includes an associated ORCID ID. The function `add_creator_id` allows you to add an ORCID or reference ID to any creator in EML.
@@ -81,8 +97,25 @@ eml@dataset@metadataProvider[[1]] <- new('metadataProvider', reference = "henrie
 
 ```
 
+# Functions for PI's
 
-# Functions for Advanced Metadata edits/package development
+## Download package
+
+The `download_package` function downloads all of the Data Objects in a Data Package to the local filesystem. It is particularly useful when a Data Package is too large to download using the web interface.
+
+Setting check_download_size to TRUE is recommended if you are uncertain of the total download size and want to avoid downloading very large Data Packages.
+
+This function will also download any data objects it finds in any child Data Packages of the input data package. If you would only like to download data from one Data Package, set download_child_packages to FALSE.
+
+Example:
+
+```{r}
+cn <- CNode("PROD")
+mn <- getMNode(cn, "urn:node:ARCTIC")
+download_package(mn, "resource_map_urn:uuid:2b4e4174-4e4b-4a46-8ab0-cc032eda8269")
+```
+
+# Functions for advanced metadata edits/package development
 
 ## Clone or download packages
 
@@ -119,7 +152,7 @@ all_awards <- get_awards()
 new_awards <- get_awards(from_date = "01/01/2017")
 ```
 
-## which in EML
+## Which in EML
 
 The `which_in_eml` function returns indices within an EML list that contain an instance where test == TRUE. See examples for more information.
 
