--- a/vignettes/01_datateam.Rmd
+++ b/vignettes/01_datateam.Rmd
@@ -4,7 +4,7 @@ date: "Last updated `r Sys.Date()`"
 output: 
     rmarkdown::html_vignette:
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{General-use}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
