--- a/vignettes/02_pi.Rmd
+++ b/vignettes/02_pi.Rmd
@@ -4,7 +4,7 @@ date: "Last updated `r Sys.Date()`"
 output: 
     rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{PIs}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
