--- a/vignettes/download_ADC_packages.Rmd
+++ b/vignettes/download_ADC_packages.Rmd
@@ -17,8 +17,9 @@ knitr::opts_chunk$set(
   eval = FALSE
 )
 ```
-*Mac Users:*
-First install the following packages:    
+**Mac Users:**
+  
+First install the following packages:    
 ```{r}
 install.packages("devtools")
 devtools::install_github("ropensci/EML")
@@ -27,8 +28,9 @@ library(datamgmt)
 library(dataone)
 ```
 
-*PC Users:*
-We currently have issues installing 'datamgmt' on PCs.  Instead of installing the package, we can load the functions directly into your global environment by copy-pasting.  
+**PC Users:**  
+  
+We currently have issues installing 'datamgmt' on PCs.  Instead of installing the package, we can load the functions directly into your global environment by copy-pasting.  
 First install the following packages:    
 ```{r}
 install.packages("devtools")
