--- a/vignettes/download_ADC_packages.Rmd
+++ b/vignettes/download_ADC_packages.Rmd
@@ -110,3 +110,19 @@ download_packages(mn,
                   prefix_file_names = TRUE,
                   download_column_metadata = TRUE)
 ```
+
+### Changing DataOne/LTER Member Nodes 
+
+We want to download this package from LTER: https://search.dataone.org/#view/https://pasta.lternet.edu/package/metadata/eml/knb-lter-ntl/276/13.  We first need to tell R that we're changing member nodes.  The fastest way of doing this is to reset your `mn` with the `guess_member_node` function.
+
+*Note:* 
+```{r}
+#' The following two calls return the same member node (mn)
+#' The first uses the metadata identifier and the second uses the resource map identifier:
+
+mn <- guess_member_node("https://pasta.lternet.edu/package/metadata/eml/knb-lter-ntl/276/13")
+mn <- guess_member_node("doi:10.6073/pasta/97c6d83a5f6a0a065ef3209fcb491b6e")
+
+# We can now use any of the above functions
+get_eml_attributes_url(mn, "https://search.dataone.org/#view/https://pasta.lternet.edu/package/metadata/eml/knb-lter-ntl/276/13")
+```
