--- a/index.Rmd
+++ b/index.Rmd
@@ -5,8 +5,8 @@
 You can install the development version from GitHub with:
 
 ```{r eval = FALSE}
-# install.packages("devtools")
-devtools::install_github("NCEAS/datamgmt")
+# install.packages("remotes")
+remotes::install_github("NCEAS/datamgmt")
 ```
 
 
