minor tweaks to formatting and help docs

--- a/index.Rmd
+++ b/index.Rmd
@@ -21,4 +21,4 @@ Click on "Articles" to see information about functions for:
 
 
 
-[![nceas_footer](https://www.nceas.ucsb.edu/files/newLogo_0.png)](http://www.nceas.ucsb.edu)
+[![nceas_footer](https://live-ncea-ucsb-edu-v01.pantheonsite.io/sites/default/files/2020-03/NCEAS-full%20logo-4C.png)](http://www.nceas.ucsb.edu)
